# libcamera

./: meson.build
src/: meson.build
src/libcamera/: ipa_manager.cpp  meson.build  pub_key.cpp
